  lost (2014-7-30).

1.13 2014-09-28 Gregory Nutt <gnutt@nuttx.org>

* Change all references to NxConsole to NxTerm.  This introduces an
  incompatibility with versions prior to NuttX-7.5 (2014-9-20).

1.14 2014-11-26 Gregory Nutt <gnutt@nuttx.org>

* Fix all UnitTest/ files to account for the corrected syslog() prototype.
  This change to the NuttX syslog introduces an incompatibility between
  NuttX 7.6 and previous versions of the UnitTest code.

1.15 2015-04-14 Gregory Nutt <gnutt@nuttx.org>

* In NuttX 7.9, the interface arch_tcinitialize() was replaced with the
  boardctl() interface.  Old versions of NxWM will then be incompatible
  with Versions of NuttX at 7.9 and beyond (2015-03-31).
* NxWidgets::CNxServer:  More renaming: up_lcdinitialize->board_lcd_initialize,
  up_lcdgetdev->board_lcd_getdev, up_lcduninitialize->board_lcd_uninitialize
  (2015-04-04).
* NxWidgets:: INxWindow, CNxWindow, CBgWindow, CNxTkWindow, CNxToolbar,
  CGraphicsPort: Add a capped parameter to all drawLine() methods.  Pass on
  to NX nx_drawline() and NXTK nxtk_drawlinetoolbar() and nxtk_drawlinewindow()
  functions (2015-04-05).

1.16 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

* NxWM::CTouchscreen: When boardctl() fails, need to print errno not the
  returned value which will always be -1 (2015-04-16).
* NxWidgets::CNxServer:  Correct use of the BOARDIOC_GRAPHICS_SETUP
  boardctl() call (2015-04-16).
* CListBox unit test:  Should use RAND_MAX, not MAX_RAND (2015-04-16).
* The NxWidgets/ directory has been removed from the NuttX GIT repository
  and now stands alone in its own repository (2015-06-27).
* Framebuffer driver parameters have changed.  This introduces an
  incompatibility with versions of NuttX prior to 7.16 (2016-04-14).
* UnitTests: Add Make.defs files to all UnitTests directories.  This is
  required by the current apps/Makefile.  Hmmm..  This means that no one
  has built the NxWidgets packages in the last several realeases!
  (2016-04-23).
